<resources>
    <string name="tfe_od_app_name" translation_description="Object Detection [CHAR_LIMIT=40]">NutriLense</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="slogan_name">Your Intelligent Food Companion</string>
    <string name="tagline">"Your Journey to Nutritional Brilliance Begins Here"</string>
    <string name="powered_by">Powered By NutriLense.</string>

    <!--Titles-->
    <string name="first_slide">See Your Food, Know Your Health</string>
    <string name="second_slide">Eating Smart Made Simple</string>
    <string name="third_slide">Personalized Nutrition Guidance</string>
    <string name="fourth_slide">Empowering Your Wellness Journey</string>
    <string name="dashboard_title">Know Your Food</string>
    <string name="link_sent">Link Sent</string>
    <string name="network_error">Network Error</string>
    <string name="featured_model">ALL FEATURED MODELS</string>
    <string name="most_viewed">MOST VIEWED PRODUCTS</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>


    <!--Descriptions-->
    <string name="first_slide_desc">See food in real-time and let Nutrivision reveals the nutritional lowdown instantly. See your food, know your health—it\'s that easy!</string>
    <string name="second_slide_desc">Nutrivision makes smart eating a snap! Choose a pic, get the facts. Keep it simple, eat smart with Nutrivision.</string>
    <string name="third_slide_desc">Tailored tips for you! Nutrivision gives personalized nutrition advice based on your health needs. Your guide to eating well, just the way you like it.</string>
    <string name="fourth_slide_desc">More than an app—it\'s your health ally. Nutrivision empowers you with real-time info and personalized tips. Take charge of your wellness journey with Nutrivision.</string>
    <string name="forget_password_details">Input your email for the password reset link to be sent promptly and securely to your registered email address.</string>
    <string name="link_sent_desc">Password reset link has been successfully sent to </string>
    <string name="network_error_desc">Please connect to the internet.</string>
    <string name="idle">Are you still trying to detect something? Please try changing angles or adjusting light.</string>
    <string name="contact_message">If you have questions, inquiries, suggestions and report kindly contact us.</string>
    <string name="no_object">Or maybe the object is still not in the database... \nSend us feedback</string>
    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>
    <string name="featured_model_desc">These model is a deep learning algorithm utilized within our app for real-time object detection and recognition. By analyzing input images or video streams, Models quickly and accurately identifies various objects and their locations within the scene, providing crucial information for enhancing user experiences.</string>
    <string name="healthy">Wow! you look great, healthy and strong. Maintain your diet!</string>
    <string name="unhealthy">Don\'t worry we can still fix this by maintaining. Start your Journey now.</string>
    <string name="reminder">Health Reminder: Consuming more than 1 serving might affect your health condition.</string>
    <string name="vegetable_desc">  is any plant, part of which is used for food (e.g, Cabbage, Bokchoy, Bell Pepper, etc.,)</string>
    <string name="fruit_desc">   the usually edible reproductive body of a seed plant. (e.g, Orange, Banana, Apple, etc.,)</string>
    <string name="raw_desc">    food that is eaten uncooked, that has not yet been cooked (e.g, Meat, Fish, Chicken, etc.,)</string>
    <string name="processfoods_desc">   any food that has been altered in some way during preparation (e.g, Longganiza, Tocino, Hotdogs, etc.,)</string>
    <string name="snacks_desc"> a light meal :food eaten between regular meals. (e.g, Junk Foods, Sandwhich, Crackers, etc.,)</string>
    <string name="drinks_desc"> a liquid that can be swallowed as refreshment or nourishment. (e.g, Water, Coke, Beer, etc.,)</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="lets_get_started">Let\'s Get Started! </string>
    <string name="see_all">See all </string>

    <!--General Menu Names-->
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_products">ALL PRODUCTS</string>
    <string name="login">LOGIN</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="realtime">Real Time</string>
    <string name="image">Image</string>
    <string name="products">Products</string>

    <!--All Categories Menu names-->
    <string name="expand_all">Expand All</string>
    <string name="all_items">All Items</string>

    <!--Login names-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create an Account</string>
    <string name="sign_in_with">or Sign in with:</string>

    <!--SignUp names-->
    <string name="enter_fullname">Full Name</string>
    <string name="re_pass">Re-type your Password</string>
    <string name="enter_pass">Password</string>
    <string name="enter_user">Username</string>
    <string name="enter_age">Age</string>
    <string name="enter_gender">Gender</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone">Phone</string>
    <string name="signUp">Sign Up</string>

</resources>
