<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/logo"
            />

        <TextView
            android:id="@+id/txtSlogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/annie_use_your_telescope"
            android:text="@string/slogan_name"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="80dp"/>

        <TextView
            android:id="@+id/txtTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/annie_use_your_telescope"
            android:text="@string/tagline"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/design_default_color_primary_dark"
                android:textColor="@color/white"
                android:onClick="callLoginScreen"
                android:transitionName="login_transition"
                tools:ignore="ButtonStyle"
                />

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:background="@color/design_default_color_primary_dark"
                android:textColor="@color/white"
                android:transitionName="signup_transition"
                android:onClick="callSignUpScreen"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How it works ?"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:background="#00000000"
            android:textColor="@color/black"/>

    </LinearLayout>

</ScrollView>